--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "node": "0.10.x",
     "npm": "1.4.x"
   },
-  
-  "devDependencies":{
+  "devDependencies": {
     "sqlite3": "3.0.8"
   },
-  
   "dependencies": {
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
@@ -21,10 +19,11 @@
     "ejs": "~0.8.5",
     "express": "~4.9.0",
     "express-partials": "^0.3.0",
+    "method-override": "^2.3.3",
     "morgan": "~1.3.0",
     "pg": "^4.1.1",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^1.7.0",
+    "sequelize": "^2.0.0",
     "serve-favicon": "~2.1.3"
   }
 }
